icons no longer covered by div - riased z index

--- a/css/main.css
+++ b/css/main.css
@@ -31,13 +31,13 @@ hr {
   margin-top: 3px;
   padding: 20px;
   font-size: 200%;
-  /*z-index: -10;*/
+  z-index: 10;
 }
 
 .icons-list a {
   color: inherit;
   text-decoration: none;
-  /*z-index: 10;*/
+  z-index: 10;
 }
 
 .center {
@@ -46,6 +46,7 @@ hr {
   top: 0; left: 0; bottom: 0; right: 0;
   margin-top: 130px;
   margin-bottom: 50px;
+  z-index: -10;
 }
 
 .center p {
